--- a/TwinTechsForms/TwinTechsForms.Core/packages.config
+++ b/TwinTechsForms/TwinTechsForms.Core/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NuGet.CommandLine" version="2.8.6" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
 </packages>
